	`twittering-update-mode-line' to update the mode-line.
	(twittering-timeline-history): Add new variable for history of
	timeline specifications.
	(twittering-add-timeline-history): Add new function for adding
	timeline history.
	(twittering-http-get-default-sentinel): Invokes
	`twittering-add-timeline-history' to update history when
	retrieving tweets successfully.

2009-12-20  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-update-mode-line): add
	(twittering-toggle-proxy, twittering-icon-mode)
	(twittering-scroll-mode, twittering-jojo-mode): use
	update-mode-line

2009-12-19  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-use-ssl): add
	(twittering-find-curl-program): add
	(twittering-start-http-ssl-session): add
	(twittering-start-http-non-ssl-session): add
	(twittering-http-application-headers): add
	(twittering-http-get): rewritten by using start-http-session
	(twittering-http-post): rewritten by using start-http-session
	(twittering-http-post-default-sentinel): use the same argument
	format of http-get-default-sentinel

2009-12-16  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-tinyurl-replace-at-point):
	distinguish between URL and others based on
	`bounds-of-thing-at-point'.

2009-12-15  haya  <haya@starfish.unicus.ddo.jp>

	* twittering-mode.el (twittering-status-not-blank-p): fix invalid escape sequence
	(twittering-tinyurl-replace-at-point): disabled when 'mm-url' doesn't exist.

2009-12-12  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el (twittering-retrieve-image-without-wget):
	Kill buffer after retrieving the image

2009-12-11  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-tinyurl-get): Call
	`mm-url-insert' only if argument `longurl' is non-nil to avoid
	error "Wrong type argument", otherwise return nil explicitly.
	(twittering-tinyurl-replace-at-point): Replace a region with
	newurl when `newurl' is non-nil.
